--- a/platformio.ini
+++ b/platformio.ini
@@ -21,5 +21,6 @@ monitor_speed = 115200
 monitor_flags = --echo
 lib_deps = 
     locoduino/DIO2@^1.5.1
+    jandrassy/WiFiEspAT@^1.3.0
     ;arduino-libraries/Ethernet @ 2.0.0
     ;SPI
